<resources>
    <string name="app_name">SplashMessenger</string>
    <string name="login">Login</string>
    <string name="loginText">Login to your account</string>
    <string name="enter_username">Enter UserName</string>
    <string name="enter_password">Enter Password</string>
    <string name="welcome_to">Welcome to</string>
    <string name="splash_messenger">splash messenger</string>
    <string name="sign_up">Sign Up</string>
    <string name="splash_background_image_description">Sea image</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_profile_page">Profile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="waterdrop_sent_message_image_description">Small raindrops image</string>
    <string name="waterdrop_received_message_image_description">Large raindrops image</string>
    <string name="waterdrop_image_profile_description">Drope image</string>
    <string name="watersplash_image_profile_description">Balloon image</string>
    <string name="watersplash_sent_message_image_description">Large balloons image</string>
    <string name="watersplash_received_message_image_description">Watersplash image</string>
    <string name="waterballoon_sent_message_image_description">Large waterballoons image</string>
    <string name="waterballoon_received_message_image_description">Small waterballoons image</string>
    <string name="waterballoon_image_profile_description">Waterballoon image</string>
    <string name="waterbottle_sent_message_image_description">Large waterbottle image</string>
    <string name="waterbottle_received_message_image_description">Small waterbottle image</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="create_your_new_account">Create your new account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="conversation">Conversation</string>
    <string name="type_message">Type your message...</string>
    <string name="send_message">Send Message</string>
    <string name="messages">Messages</string>
    <string name="search">Search...</string>
    <string name="message_image_description">Message image</string>
    <string name="droplet_image_description">Droplet image</string>
    <string name="cloud_image_description">Cloud image</string>
    <string name="start_conversation">Search to start a conversation</string>
    <string name="no_message">No Messages, Yet</string>
    <string name="no_user_logged_in">no user logged in</string>
    <string name="sign_out">Sign out</string>
    <string name="dismiss">Dismiss</string>
    <string name="reply">Reply</string>
    <string name="message_content">Message content</string>
    <string name="sender_name">Sender Name</string>
    <string name="don_t_have_an_account">Don´t have an account?</string>
    <string name="username_text">Username text</string>
    <string name="usermail">UserMail</string>
    <string name="delete_account">Delete account</string>
    <string name="date_time">Date and time could not be loaded</string>
    <string name="deletecoversationbutton">deleteCoversationButton</string>

</resources>