<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/medium_padding"

        >

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="@dimen/NoticeImageW"
            android:layout_height="@dimen/NoticeImageH"
            android:src="@drawable/waterbubble_received_message" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/senderName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sender_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/messageContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_content"

                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:padding="10dp"

                >

                <Button
                    android:id="@+id/replyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reply"
                    android:layout_marginRight="10dp"
                    />

                <Button
                    android:id="@+id/dismissButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dismiss" />
            </LinearLayout>
        </LinearLayout>
</LinearLayout>