<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity">

<View
    android:id="@+id/topView"
    android:layout_width="match_parent"
    android:layout_height="@dimen/view_top_height_sign_up"
    android:background="@color/white"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@id/dividerView" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/sign_up"
    android:textColor="@color/text_black"
    android:textSize="@dimen/sign_up_text_size"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.065" />

<View
    android:id="@+id/dividerView"
    android:layout_width="match_parent"
    android:layout_height="@dimen/divider_sign_up_height"
    android:background="@color/white"
    app:layout_constraintTop_toBottomOf="@id/topView"
    app:layout_constraintBottom_toTopOf="@id/bottomView" />

<View
    android:id="@+id/bottomView"
    android:layout_width="match_parent"
    android:layout_height="@dimen/view_bottom_height_sign_up"
    android:background="@color/background_grey"
    app:layout_constraintTop_toBottomOf="@id/dividerView"
    app:layout_constraintBottom_toBottomOf="parent" />


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:text="@string/create_your_new_account"
    android:textColor="@color/dark_grey"
    android:textSize="@dimen/create_new_account_text_size"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.226" />

<EditText
    android:id="@+id/fullNameEditText"
    android:layout_width="@dimen/buttons_sign_up_width"
    android:layout_height="@dimen/buttons_sign_up_height"
    android:drawableStart="@drawable/ic_person"
    android:background="@drawable/rounded_edittext_background"
    android:hint="@string/full_name"
    android:textColorHint="@color/grey_text"
    android:textSize="@dimen/large_text_size"
    android:textStyle="bold"
    android:drawablePadding="@dimen/margin_small"
    android:padding="@dimen/large_padding"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.503"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.323" />

<EditText
    android:id="@+id/emailEditText"
    android:layout_width="@dimen/buttons_sign_up_width"
    android:layout_height="@dimen/buttons_sign_up_height"
    android:drawableStart="@drawable/ic_email"
    android:background="@drawable/rounded_edittext_background"
    android:hint="@string/email"
    android:textColorHint="@color/grey_text"
    android:textSize="@dimen/large_text_size"
    android:textStyle="bold"
    android:drawablePadding="@dimen/margin_small"
    android:padding="@dimen/large_padding"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.503"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.448" />

<EditText
    android:id="@+id/passwordEditText"
    android:layout_width="@dimen/buttons_sign_up_width"
    android:layout_height="@dimen/buttons_sign_up_height"
    android:drawableStart="@drawable/ic_lock"
    android:background="@drawable/rounded_edittext_background"
    android:hint="@string/password"
    android:textColorHint="@color/grey_text"
    android:textSize="@dimen/large_text_size"
    android:textStyle="bold"
    android:drawablePadding="@dimen/margin_small"
    android:padding="@dimen/large_padding"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.503"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.57" />

<EditText
    android:id="@+id/passwordConfirmEditText"
    android:layout_width="@dimen/buttons_sign_up_width"
    android:layout_height="@dimen/buttons_sign_up_height"
    android:drawableStart="@drawable/ic_lock"
    android:background="@drawable/rounded_edittext_background"
    android:hint="@string/password_confirm"
    android:textColorHint="@color/grey_text"
    android:textSize="@dimen/large_text_size"
    android:textStyle="bold"
    android:drawablePadding="@dimen/margin_small"
    android:padding="@dimen/large_padding"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.503"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.692" />


<Button
    android:id="@+id/signUpButton"
    android:layout_width="@dimen/buttons_sign_up_width"
    android:layout_height="@dimen/buttons_sign_up_height"
    android:backgroundTint="@color/blue"
    android:text="@string/sign_up"
    android:textColor="@color/white"
    android:textSize="@dimen/create_new_account_text_size"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/topView"
    app:layout_constraintHorizontal_bias="0.503"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.879" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/already_have_an_account"
    android:textColor="@color/blue"
    android:textSize="@dimen/create_new_account_text_size"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.339"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.943" />

    <TextView
        android:id="@+id/goToLogInTextClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:text="@string/login"
        android:textColor="@color/blue"
        android:textSize="@dimen/create_new_account_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/topView"
        app:layout_constraintHorizontal_bias="0.806"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943" />


</androidx.constraintlayout.widget.ConstraintLayout>