<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_top_height_sign_up"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dividerView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/text_black"
        android:textSize="@dimen/sign_up_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

    <View
        android:id="@+id/dividerView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_sign_up_height"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/topView"
        app:layout_constraintBottom_toTopOf="@id/bottomView" />

    <View
        android:id="@+id/bottomView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_bottom_height_sign_up"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/dividerView"
        app:layout_constraintBottom_toBottomOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/loginText"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/create_new_account_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226" />

    <EditText
        android:id="@+id/ed_Username"
        android:layout_width="@dimen/buttons_sign_up_width"
        android:layout_height="@dimen/buttons_sign_up_height"
        android:drawableStart="@drawable/ic_email"
        android:background="@drawable/rounded_edittext_background"
        android:hint="@string/email"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        android:drawablePadding="@dimen/margin_small"
        android:padding="@dimen/large_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323" />

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="@dimen/buttons_sign_up_width"
        android:layout_height="@dimen/buttons_sign_up_height"
        android:drawableStart="@drawable/ic_lock"
        android:background="@drawable/rounded_edittext_background"
        android:hint="@string/password"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        android:drawablePadding="@dimen/margin_small"
        android:padding="@dimen/large_padding"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.448" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="@dimen/buttons_sign_up_width"
        android:layout_height="@dimen/buttons_sign_up_height"
        android:backgroundTint="@color/blue"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/create_new_account_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/topView"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.879" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/blue"
        android:textSize="@dimen/create_new_account_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.339"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943" />

    <TextView
        android:id="@+id/goToSignUpButtton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:text="@string/sign_up"
        android:textColor="@color/blue"
        android:textSize="@dimen/create_new_account_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/topView"
        app:layout_constraintHorizontal_bias="0.806"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943" />


</androidx.constraintlayout.widget.ConstraintLayout>